--- a/backend/src/main/resources/messages/messages.properties
+++ b/backend/src/main/resources/messages/messages.properties
@@ -1,5 +1,6 @@
 # Default Messages (Portuguese - Brazil)
 # This file serves as fallback when specific locale is not found
+# História 5: Integração e Otimização - Sprint S2.2
 
 # ========================================
 # MENSAGENS GERAIS
@@ -29,6 +30,61 @@ auth.access.denied=Acesso negado
 auth.user.not.found=Usuário não encontrado
 auth.password.invalid=Senha inválida
 auth.user.not.authenticated=Usuário não autenticado corretamente
+
+# ========================================
+# RATE LIMITING - História 5: Sprint S2.2
+# ========================================
+rate.limit.exceeded=Muitas requisições. Tente novamente em {0} segundos
+rate.limit.warning=Limite de requisições próximo do máximo
+rate.limit.blocked=IP bloqueado temporariamente por excesso de requisições
+rate.limit.user.exceeded=Limite de requisições por usuário excedido
+rate.limit.ip.exceeded=Limite de requisições por IP excedido
+rate.limit.report.exceeded=Limite de requisições para relatórios excedido
+rate.limit.admin.exceeded=Limite de requisições administrativas excedido
+rate.limit.enabled=Rate limiting habilitado
+rate.limit.disabled=Rate limiting desabilitado
+rate.limit.bucket.created=Bucket de rate limiting criado para {0}
+rate.limit.bucket.cleared=Cache de buckets de rate limiting limpo
+rate.limit.stats.requests=Requisições restantes: {0}
+rate.limit.stats.reset=Limite será resetado em: {0} segundos
+
+# ========================================
+# CACHE E PERFORMANCE - História 5: Sprint S2.2
+# ========================================
+cache.hit=Dados obtidos do cache
+cache.miss=Dados não encontrados no cache, calculando...
+cache.evicted=Cache limpo com sucesso
+cache.statistics.hit=Estatísticas obtidas do cache
+cache.statistics.miss=Estatísticas calculadas e armazenadas no cache
+cache.commission.hit=Relatório de comissões obtido do cache
+cache.commission.miss=Relatório de comissões calculado e armazenado no cache
+cache.categories.hit=Categorias obtidas do cache
+cache.categories.miss=Categorias carregadas e armazenadas no cache
+cache.sellers.hit=Vendedores ativos obtidos do cache
+cache.sellers.miss=Vendedores ativos carregados e armazenados no cache
+
+performance.warning=Performance degradada: operação levou {0}ms (limite: {1}ms)
+performance.optimal=Operação concluída em {0}ms - performance ótima
+performance.export.time=Exportação concluída em {0}ms
+performance.query.optimized=Query otimizada executada em {0}ms
+performance.index.used=Índice utilizado na consulta: {0}
+performance.compression.enabled=Compressão habilitada para resposta
+performance.compression.ratio=Taxa de compressão: {0}%
+
+# ========================================
+# INTEGRAÇÃO E OTIMIZAÇÃO - História 5: Sprint S2.2
+# ========================================
+integration.test.success=Teste de integração executado com sucesso
+integration.test.failed=Teste de integração falhou: {0}
+integration.cache.test=Teste de cache executado
+integration.rate.limit.test=Teste de rate limiting executado
+integration.compression.test=Teste de compressão executado
+integration.performance.test=Teste de performance executado em {0}ms
+
+optimization.index.created=Índice criado para otimização: {0}
+optimization.query.improved=Query otimizada com melhoria de {0}%
+optimization.cache.configured=Cache configurado com TTL de {0} minutos
+optimization.compression.configured=Compressão configurada para tipos MIME: {0}
 
 # ========================================
 # USUÁRIOS
@@ -137,6 +193,38 @@ lot.products.activated=Produtos do lote ativados com sucesso
 lot.products.required=Lote deve ter pelo menos um produto para ser ativado
 
 # ========================================
+# ESTATÍSTICAS E RELATÓRIOS
+# História 1: Endpoints de Estatísticas de Contratos - Sprint S2.2
+# ========================================
+
+# Estatísticas Gerais
+statistics.success=Estatísticas obtidas com sucesso
+statistics.calculation.error=Erro ao calcular estatísticas de contratos
+statistics.status.invalid=Status inválido fornecido: {0}. Ignorando filtro de status
+statistics.seller.default=Vendedor {0}
+statistics.seller.error=Erro ao buscar dados do vendedor {0}: {1}
+
+# Relatórios de Comissões
+commission.report.success=Relatório de comissões gerado com sucesso
+commission.calculation.error=Erro ao calcular relatório de comissões
+commission.no.data=Nenhum dado encontrado para o período especificado
+
+# Projeções de Receita
+revenue.projections.success=Projeções de receita obtidas com sucesso
+revenue.calculation.error=Erro ao calcular projeções de receita
+
+# Validações de Período
+validation.date.start.before.end=Data de início deve ser anterior à data de fim
+validation.period.max.one.year=Período máximo permitido é de 1 ano
+validation.period.invalid=Período inválido especificado
+
+# Formatação de Datas
+date.range.separator= a 
+date.format.day=dd/MM/yyyy
+date.format.month=MMMM yyyy
+date.format.year=yyyy
+
+# ========================================
 # VALIDAÇÕES
 # ========================================
 validation.required=Campo obrigatório
@@ -202,6 +290,7 @@ error.403=Acesso negado
 error.404=Recurso não encontrado
 error.409=Conflito de dados
 error.422=Dados não processáveis
+error.429=Muitas requisições - tente novamente mais tarde
 error.500=Erro interno do servidor
 
 # ========================================
@@ -219,3 +308,109 @@ business.invalid.state=Estado inválido para a operação
 business.constraint.violation=Violação de regra de negócio
 business.resource.conflict=Conflito de recursos
 business.operation.not.allowed=Operação não permitida
+
+# ========================================
+# CÁLCULO DE COMISSÕES - Sprint S2.2
+# ========================================
+
+# Cálculos Avançados de Comissões
+commission.detailed.success=Relatório detalhado de comissões gerado com sucesso - {0} contratos processados
+commission.by.seller.success=Comissões por vendedor calculadas com sucesso - {0} vendedores processados
+commission.breakdown.success=Breakdown detalhado gerado com sucesso - {0} contratos encontrados para o vendedor {1}
+commission.comparison.success=Comparação de períodos realizada com sucesso
+
+# Projeções de Receita Avançadas
+revenue.projection.success=Projeção de receita calculada com sucesso para {0} meses: R$ {1}
+revenue.projection.error=Erro ao calcular projeção de receita
+
+# ========================================
+# CONTRATOS VENCENDO - História 3: Sprint S2.2
+# ========================================
+
+# Relatórios de Contratos Vencendo
+expiring.contracts.success=Relatório de contratos vencendo gerado com sucesso - {0} contratos encontrados
+expiring.contracts.empty=Nenhum contrato vencendo encontrado para os critérios especificados
+expiring.contracts.error=Erro ao gerar relatório de contratos vencendo
+
+# Notificações Automáticas
+notifications.sent.success=Notificações de contratos vencendo enviadas com sucesso
+notifications.sent.error=Erro ao enviar notificações de contratos vencendo
+notifications.email.sent=Notificação enviada por email para {0}
+notifications.email.failed=Falha ao enviar email para {0}: {1}
+notifications.batch.completed=Lote de notificações processado: {0} enviadas, {1} falharam
+
+# Exportação de Relatórios
+export.csv.success=Relatório exportado em CSV com sucesso
+export.pdf.success=Relatório exportado em PDF com sucesso
+export.error=Erro ao exportar relatório: {0}
+export.csv.generating=Gerando relatório CSV...
+export.pdf.generating=Gerando relatório PDF...
+export.file.size=Arquivo gerado com {0} bytes
+
+# Validações Específicas da História 3
+validation.days.range=Número de dias deve estar entre 1 e 365
+validation.months.range=Número de meses deve estar entre 1 e 24
+validation.urgency.invalid=Nível de urgência inválido: {0}. Valores válidos: ALTA, MEDIA, BAIXA
+validation.seller.required=ID do vendedor é obrigatório
+validation.export.format.invalid=Formato de exportação inválido: {0}. Formatos válidos: CSV, PDF
+
+# Mensagens de Email para Contratos Vencendo
+contract.expiring.subject=⚠️ Contrato vencendo em {0} dias
+contract.expiring.body=Olá {0},\n\nSeu contrato na categoria ''{1}'' vence em {2} dias.\n\nPor favor, entre em contato conosco para renovação.\n\nAtenciosamente,\nEquipe Leilão Eletrônico
+contract.expiring.urgent.subject=🚨 URGENTE: Contrato vence em {0} dias
+contract.expiring.reminder.subject=📅 Lembrete: Contrato vencendo em {0} dias
+
+# Scheduler e Jobs Automáticos
+scheduler.contracts.expiring.start=Iniciando verificação automática de contratos vencendo
+scheduler.contracts.expiring.completed=Verificação de contratos vencendo concluída em {0}ms
+scheduler.contracts.expiring.error=Erro na verificação automática de contratos vencendo
+scheduler.notifications.sent=Scheduler enviou {0} notificações de contratos vencendo
+scheduler.cleanup.start=Iniciando limpeza automática de dados
+scheduler.cleanup.completed=Limpeza automática concluída
+
+# Urgência e Prioridades
+urgency.high=Alta
+urgency.medium=Média
+urgency.low=Baixa
+urgency.critical=Crítica
+
+priority.immediate=Imediata
+priority.high=Alta
+priority.normal=Normal
+priority.low=Baixa
+
+# Formatação e Exibição
+commission.period.daily=Diário
+commission.period.weekly=Semanal  
+commission.period.monthly=Mensal
+commission.period.quarterly=Trimestral
+commission.period.yearly=Anual
+
+commission.status.realized=Realizadas
+commission.status.projected=Projetadas
+commission.status.pending=Pendentes
+
+# Métricas e KPIs
+metrics.total.contracts=Total de Contratos
+metrics.active.sellers=Vendedores Ativos
+metrics.projected.revenue=Receita Projetada
+metrics.realized.revenue=Receita Realizada
+metrics.average.commission=Taxa Média de Comissão
+metrics.contracts.expiring=Contratos Vencendo
+metrics.contracts.created=Contratos Criados
+metrics.contracts.expired=Contratos Expirados
+metrics.active.categories=Categorias Ativas
+metrics.notifications.sent=Notificações Enviadas
+metrics.urgent.contracts=Contratos Urgentes
+
+# Relatórios
+report.commission.title=Relatório de Comissões
+report.commission.subtitle=Análise detalhada de comissões por período
+report.expiring.title=Relatório de Contratos Vencendo
+report.expiring.subtitle=Contratos próximos ao vencimento
+report.projection.title=Projeção de Receita
+report.projection.subtitle=Estimativas baseadas em contratos ativos
+report.generated.at=Relatório gerado em {0}
+report.filters.applied=Filtros aplicados
+report.summary=Resumo Executivo
+report.details=Detalhes
