--- a/backend/src/main/resources/messages/messages_es_ES.properties
+++ b/backend/src/main/resources/messages/messages_es_ES.properties
@@ -1,5 +1,6 @@
 # Mensajes en Español (España)
 # Archivo de mensajes para internacionalización
+# Historia 5: Integración y Optimización - Sprint S2.2
 
 # ========================================
 # MENSAJES GENERALES
@@ -29,6 +30,61 @@ auth.access.denied=Acceso denegado
 auth.user.not.found=Usuario no encontrado
 auth.password.invalid=Contraseña inválida
 auth.user.not.authenticated=Usuario no autenticado correctamente
+
+# ========================================
+# LIMITACIÓN DE VELOCIDAD - Historia 5: Sprint S2.2
+# ========================================
+rate.limit.exceeded=Demasiadas solicitudes. Inténtelo de nuevo en {0} segundos
+rate.limit.warning=Límite de solicitudes próximo al máximo
+rate.limit.blocked=IP bloqueada temporalmente por exceso de solicitudes
+rate.limit.user.exceeded=Límite de solicitudes por usuario excedido
+rate.limit.ip.exceeded=Límite de solicitudes por IP excedido
+rate.limit.report.exceeded=Límite de solicitudes para reportes excedido
+rate.limit.admin.exceeded=Límite de solicitudes administrativas excedido
+rate.limit.enabled=Limitación de velocidad habilitada
+rate.limit.disabled=Limitación de velocidad deshabilitada
+rate.limit.bucket.created=Bucket de limitación de velocidad creado para {0}
+rate.limit.bucket.cleared=Caché de buckets de limitación de velocidad limpiado
+rate.limit.stats.requests=Solicitudes restantes: {0}
+rate.limit.stats.reset=El límite se restablecerá en: {0} segundos
+
+# ========================================
+# CACHÉ Y RENDIMIENTO - Historia 5: Sprint S2.2
+# ========================================
+cache.hit=Datos obtenidos del caché
+cache.miss=Datos no encontrados en caché, calculando...
+cache.evicted=Caché limpiado con éxito
+cache.statistics.hit=Estadísticas obtenidas del caché
+cache.statistics.miss=Estadísticas calculadas y almacenadas en caché
+cache.commission.hit=Reporte de comisiones obtenido del caché
+cache.commission.miss=Reporte de comisiones calculado y almacenado en caché
+cache.categories.hit=Categorías obtenidas del caché
+cache.categories.miss=Categorías cargadas y almacenadas en caché
+cache.sellers.hit=Vendedores activos obtenidos del caché
+cache.sellers.miss=Vendedores activos cargados y almacenados en caché
+
+performance.warning=Rendimiento degradado: operación tomó {0}ms (límite: {1}ms)
+performance.optimal=Operación completada en {0}ms - rendimiento óptimo
+performance.export.time=Exportación completada en {0}ms
+performance.query.optimized=Consulta optimizada ejecutada en {0}ms
+performance.index.used=Índice utilizado en la consulta: {0}
+performance.compression.enabled=Compresión habilitada para respuesta
+performance.compression.ratio=Tasa de compresión: {0}%
+
+# ========================================
+# INTEGRACIÓN Y OPTIMIZACIÓN - Historia 5: Sprint S2.2
+# ========================================
+integration.test.success=Prueba de integración ejecutada con éxito
+integration.test.failed=Prueba de integración falló: {0}
+integration.cache.test=Prueba de caché ejecutada
+integration.rate.limit.test=Prueba de limitación de velocidad ejecutada
+integration.compression.test=Prueba de compresión ejecutada
+integration.performance.test=Prueba de rendimiento ejecutada en {0}ms
+
+optimization.index.created=Índice creado para optimización: {0}
+optimization.query.improved=Consulta optimizada con mejora del {0}%
+optimization.cache.configured=Caché configurado con TTL de {0} minutos
+optimization.compression.configured=Compresión configurada para tipos MIME: {0}
 
 # ========================================
 # USUARIOS
@@ -234,6 +290,7 @@ error.403=Acceso denegado
 error.404=Recurso no encontrado
 error.409=Conflicto de datos
 error.422=Datos no procesables
+error.429=Demasiadas solicitudes - inténtelo de nuevo más tarde
 error.500=Error interno del servidor
 
 # ========================================
@@ -253,7 +310,7 @@ business.resource.conflict=Conflicto de recursos
 business.operation.not.allowed=Operación no permitida
 
 # ========================================
-# CÁLCULOS AVANZADOS DE COMISIONES - Sprint S2.2
+# CÁLCULOS DE COMISIONES - Sprint S2.2
 # ========================================
 
 # Cálculos Avanzados de Comisiones
@@ -266,20 +323,61 @@ commission.comparison.success=Comparación de períodos realizada con éxito
 revenue.projection.success=Proyección de ingresos calculada con éxito para {0} meses: €{1}
 revenue.projection.error=Error al calcular proyección de ingresos
 
-# Contratos Venciendo - Historia 3
+# ========================================
+# CONTRATOS VENCIENDO - Historia 3: Sprint S2.2
+# ========================================
+
+# Reportes de Contratos Venciendo
 expiring.contracts.success=Reporte de contratos venciendo generado con éxito - {0} contratos encontrados
+expiring.contracts.empty=No se encontraron contratos venciendo para los criterios especificados
+expiring.contracts.error=Error al generar reporte de contratos venciendo
+
+# Notificaciones Automáticas
 notifications.sent.success=Notificaciones de contratos venciendo enviadas con éxito
 notifications.sent.error=Error al enviar notificaciones de contratos venciendo
+notifications.email.sent=Notificación enviada por email a {0}
+notifications.email.failed=Error al enviar email a {0}: {1}
+notifications.batch.completed=Lote de notificaciones procesado: {0} enviadas, {1} fallaron
 
-# Validaciones Específicas de la Historia 2
+# Exportación de Reportes
+export.csv.success=Reporte exportado a CSV con éxito
+export.pdf.success=Reporte exportado a PDF con éxito
+export.error=Error al exportar reporte: {0}
+export.csv.generating=Generando reporte CSV...
+export.pdf.generating=Generando reporte PDF...
+export.file.size=Archivo generado con {0} bytes
+
+# Validaciones Específicas de la Historia 3
 validation.days.range=El número de días debe estar entre 1 y 365
 validation.months.range=El número de meses debe estar entre 1 y 24
 validation.urgency.invalid=Nivel de urgencia inválido: {0}. Valores válidos: ALTA, MEDIA, BAJA
 validation.seller.required=El ID del vendedor es obligatorio
+validation.export.format.invalid=Formato de exportación inválido: {0}. Formatos válidos: CSV, PDF
 
-# Mensajes de Contratos Venciendo
-contract.expiring.subject=Contrato venciendo en {0} días
+# Mensajes de Email para Contratos Venciendo
+contract.expiring.subject=⚠️ Contrato venciendo en {0} días
 contract.expiring.body=Hola {0},\n\nSu contrato en la categoría ''{1}'' vence en {2} días.\n\nPor favor, póngase en contacto con nosotros para la renovación.\n\nAtentamente,\nEquipo de Subasta Electrónica
+contract.expiring.urgent.subject=🚨 URGENTE: Contrato vence en {0} días
+contract.expiring.reminder.subject=📅 Recordatorio: Contrato venciendo en {0} días
+
+# Programador y Trabajos Automáticos
+scheduler.contracts.expiring.start=Iniciando verificación automática de contratos venciendo
+scheduler.contracts.expiring.completed=Verificación de contratos venciendo completada en {0}ms
+scheduler.contracts.expiring.error=Error en la verificación automática de contratos venciendo
+scheduler.notifications.sent=El programador envió {0} notificaciones de contratos venciendo
+scheduler.cleanup.start=Iniciando limpieza automática de datos
+scheduler.cleanup.completed=Limpieza automática completada
+
+# Urgencia y Prioridades
+urgency.high=Alta
+urgency.medium=Media
+urgency.low=Baja
+urgency.critical=Crítica
+
+priority.immediate=Inmediata
+priority.high=Alta
+priority.normal=Normal
+priority.low=Baja
 
 # Formateo y Visualización
 commission.period.daily=Diario
@@ -292,10 +390,6 @@ commission.status.realized=Realizadas
 commission.status.projected=Proyectadas
 commission.status.pending=Pendientes
 
-urgency.high=Alta
-urgency.medium=Media
-urgency.low=Baja
-
 # Métricas y KPIs
 metrics.total.contracts=Total de Contratos
 metrics.active.sellers=Vendedores Activos
@@ -306,6 +400,8 @@ metrics.contracts.expiring=Contratos Venciendo
 metrics.contracts.created=Contratos Creados
 metrics.contracts.expired=Contratos Expirados
 metrics.active.categories=Categorías Activas
+metrics.notifications.sent=Notificaciones Enviadas
+metrics.urgent.contracts=Contratos Urgentes
 
 # Reportes
 report.commission.title=Reporte de Comisiones
@@ -314,14 +410,7 @@ report.expiring.title=Reporte de Contratos Venciendo
 report.expiring.subtitle=Contratos próximos al vencimiento
 report.projection.title=Proyección de Ingresos
 report.projection.subtitle=Estimaciones basadas en contratos activos
-
-# Exportación
-export.csv.success=Reporte exportado a CSV con éxito
-export.pdf.success=Reporte exportado a PDF con éxito
-export.error=Error al exportar reporte: {0}
-
-# Caché y Rendimiento
-cache.statistics.hit=Estadísticas obtenidas del caché
-cache.statistics.miss=Estadísticas calculadas y almacenadas en caché
-performance.warning=Rendimiento degradado: operación tomó {0}ms (límite: {1}ms)
-performance.optimal=Operación completada en {0}ms - rendimiento óptimo
+report.generated.at=Reporte generado en {0}
+report.filters.applied=Filtros aplicados
+report.summary=Resumen Ejecutivo
+report.details=Detalles
