--- a/backend/src/main/resources/messages/messages_it_IT.properties
+++ b/backend/src/main/resources/messages/messages_it_IT.properties
@@ -1,5 +1,6 @@
 # Messaggi in Italiano (Italia)
 # File di messaggi per l'internazionalizzazione
+# Storia 5: Integrazione e Ottimizzazione - Sprint S2.2
 
 # ========================================
 # MESSAGGI GENERALI
@@ -29,6 +30,61 @@ auth.access.denied=Accesso negato
 auth.user.not.found=Utente non trovato
 auth.password.invalid=Password non valida
 auth.user.not.authenticated=Utente non autenticato correttamente
+
+# ========================================
+# LIMITAZIONE VELOCITÀ - Storia 5: Sprint S2.2
+# ========================================
+rate.limit.exceeded=Troppe richieste. Riprova tra {0} secondi
+rate.limit.warning=Limite di richieste vicino al massimo
+rate.limit.blocked=IP temporaneamente bloccato per eccesso di richieste
+rate.limit.user.exceeded=Limite di richieste per utente superato
+rate.limit.ip.exceeded=Limite di richieste per IP superato
+rate.limit.report.exceeded=Limite di richieste per report superato
+rate.limit.admin.exceeded=Limite di richieste amministrative superato
+rate.limit.enabled=Limitazione velocità abilitata
+rate.limit.disabled=Limitazione velocità disabilitata
+rate.limit.bucket.created=Bucket di limitazione velocità creato per {0}
+rate.limit.bucket.cleared=Cache dei bucket di limitazione velocità pulita
+rate.limit.stats.requests=Richieste rimanenti: {0}
+rate.limit.stats.reset=Il limite sarà ripristinato tra: {0} secondi
+
+# ========================================
+# CACHE E PRESTAZIONI - Storia 5: Sprint S2.2
+# ========================================
+cache.hit=Dati ottenuti dalla cache
+cache.miss=Dati non trovati nella cache, calcolando...
+cache.evicted=Cache pulita con successo
+cache.statistics.hit=Statistiche ottenute dalla cache
+cache.statistics.miss=Statistiche calcolate e memorizzate nella cache
+cache.commission.hit=Report delle commissioni ottenuto dalla cache
+cache.commission.miss=Report delle commissioni calcolato e memorizzato nella cache
+cache.categories.hit=Categorie ottenute dalla cache
+cache.categories.miss=Categorie caricate e memorizzate nella cache
+cache.sellers.hit=Venditori attivi ottenuti dalla cache
+cache.sellers.miss=Venditori attivi caricati e memorizzati nella cache
+
+performance.warning=Prestazioni degradate: operazione ha richiesto {0}ms (limite: {1}ms)
+performance.optimal=Operazione completata in {0}ms - prestazioni ottimali
+performance.export.time=Esportazione completata in {0}ms
+performance.query.optimized=Query ottimizzata eseguita in {0}ms
+performance.index.used=Indice utilizzato nella query: {0}
+performance.compression.enabled=Compressione abilitata per la risposta
+performance.compression.ratio=Rapporto di compressione: {0}%
+
+# ========================================
+# INTEGRAZIONE E OTTIMIZZAZIONE - Storia 5: Sprint S2.2
+# ========================================
+integration.test.success=Test di integrazione eseguito con successo
+integration.test.failed=Test di integrazione fallito: {0}
+integration.cache.test=Test di cache eseguito
+integration.rate.limit.test=Test di limitazione velocità eseguito
+integration.compression.test=Test di compressione eseguito
+integration.performance.test=Test di prestazioni eseguito in {0}ms
+
+optimization.index.created=Indice creato per ottimizzazione: {0}
+optimization.query.improved=Query ottimizzata con miglioramento del {0}%
+optimization.cache.configured=Cache configurata con TTL di {0} minuti
+optimization.compression.configured=Compressione configurata per tipi MIME: {0}
 
 # ========================================
 # UTENTI
@@ -234,6 +290,7 @@ error.403=Accesso negato
 error.404=Risorsa non trovata
 error.409=Conflitto di dati
 error.422=Dati non elaborabili
+error.429=Troppe richieste - riprova più tardi
 error.500=Errore interno del server
 
 # ========================================
@@ -253,7 +310,7 @@ business.resource.conflict=Conflitto di risorse
 business.operation.not.allowed=Operazione non consentita
 
 # ========================================
-# CALCOLI AVANZATI DELLE COMMISSIONI - Sprint S2.2
+# CALCOLI DELLE COMMISSIONI - Sprint S2.2
 # ========================================
 
 # Calcoli Avanzati delle Commissioni
@@ -266,20 +323,61 @@ commission.comparison.success=Confronto dei periodi completato con successo
 revenue.projection.success=Proiezione dei ricavi calcolata con successo per {0} mesi: €{1}
 revenue.projection.error=Errore nel calcolo della proiezione dei ricavi
 
-# Contratti in Scadenza - Storia 3
+# ========================================
+# CONTRATTI IN SCADENZA - Storia 3: Sprint S2.2
+# ========================================
+
+# Report dei Contratti in Scadenza
 expiring.contracts.success=Report dei contratti in scadenza generato con successo - {0} contratti trovati
+expiring.contracts.empty=Nessun contratto in scadenza trovato per i criteri specificati
+expiring.contracts.error=Errore nella generazione del report dei contratti in scadenza
+
+# Notifiche Automatiche
 notifications.sent.success=Notifiche dei contratti in scadenza inviate con successo
 notifications.sent.error=Errore nell'invio delle notifiche dei contratti in scadenza
+notifications.email.sent=Notifica inviata via email a {0}
+notifications.email.failed=Errore nell'invio dell'email a {0}: {1}
+notifications.batch.completed=Lotto di notifiche elaborato: {0} inviate, {1} fallite
 
-# Validazioni Specifiche per la Storia 2
+# Esportazione dei Report
+export.csv.success=Report esportato in CSV con successo
+export.pdf.success=Report esportato in PDF con successo
+export.error=Errore nell'esportazione del report: {0}
+export.csv.generating=Generazione report CSV...
+export.pdf.generating=Generazione report PDF...
+export.file.size=File generato con {0} byte
+
+# Validazioni Specifiche per la Storia 3
 validation.days.range=Il numero di giorni deve essere compreso tra 1 e 365
 validation.months.range=Il numero di mesi deve essere compreso tra 1 e 24
 validation.urgency.invalid=Livello di urgenza non valido: {0}. Valori validi: ALTA, MEDIA, BASSA
 validation.seller.required=L'ID del venditore è obbligatorio
+validation.export.format.invalid=Formato di esportazione non valido: {0}. Formati validi: CSV, PDF
 
-# Messaggi dei Contratti in Scadenza
-contract.expiring.subject=Contratto in scadenza tra {0} giorni
+# Messaggi Email per Contratti in Scadenza
+contract.expiring.subject=⚠️ Contratto in scadenza tra {0} giorni
 contract.expiring.body=Ciao {0},\n\nIl tuo contratto nella categoria ''{1}'' scade tra {2} giorni.\n\nTi preghiamo di contattarci per il rinnovo.\n\nCordiali saluti,\nTeam Asta Elettronica
+contract.expiring.urgent.subject=🚨 URGENTE: Contratto scade tra {0} giorni
+contract.expiring.reminder.subject=📅 Promemoria: Contratto in scadenza tra {0} giorni
+
+# Scheduler e Lavori Automatici
+scheduler.contracts.expiring.start=Avvio controllo automatico contratti in scadenza
+scheduler.contracts.expiring.completed=Controllo contratti in scadenza completato in {0}ms
+scheduler.contracts.expiring.error=Errore nel controllo automatico dei contratti in scadenza
+scheduler.notifications.sent=Lo scheduler ha inviato {0} notifiche di contratti in scadenza
+scheduler.cleanup.start=Avvio pulizia automatica dei dati
+scheduler.cleanup.completed=Pulizia automatica completata
+
+# Urgenza e Priorità
+urgency.high=Alta
+urgency.medium=Media
+urgency.low=Bassa
+urgency.critical=Critica
+
+priority.immediate=Immediata
+priority.high=Alta
+priority.normal=Normale
+priority.low=Bassa
 
 # Formattazione e Visualizzazione
 commission.period.daily=Giornaliero
@@ -292,10 +390,6 @@ commission.status.realized=Realizzate
 commission.status.projected=Proiettate
 commission.status.pending=In sospeso
 
-urgency.high=Alta
-urgency.medium=Media
-urgency.low=Bassa
-
 # Metriche e KPI
 metrics.total.contracts=Totale Contratti
 metrics.active.sellers=Venditori Attivi
@@ -306,6 +400,8 @@ metrics.contracts.expiring=Contratti in Scadenza
 metrics.contracts.created=Contratti Creati
 metrics.contracts.expired=Contratti Scaduti
 metrics.active.categories=Categorie Attive
+metrics.notifications.sent=Notifiche Inviate
+metrics.urgent.contracts=Contratti Urgenti
 
 # Report
 report.commission.title=Report delle Commissioni
@@ -314,14 +410,7 @@ report.expiring.title=Report dei Contratti in Scadenza
 report.expiring.subtitle=Contratti prossimi alla scadenza
 report.projection.title=Proiezione dei Ricavi
 report.projection.subtitle=Stime basate sui contratti attivi
-
-# Esportazione
-export.csv.success=Report esportato in CSV con successo
-export.pdf.success=Report esportato in PDF con successo
-export.error=Errore nell'esportazione del report: {0}
-
-# Cache e Performance
-cache.statistics.hit=Statistiche ottenute dalla cache
-cache.statistics.miss=Statistiche calcolate e memorizzate nella cache
-performance.warning=Performance degradate: operazione ha richiesto {0}ms (limite: {1}ms)
-performance.optimal=Operazione completata in {0}ms - performance ottimali
+report.generated.at=Report generato il {0}
+report.filters.applied=Filtri applicati
+report.summary=Riassunto Esecutivo
+report.details=Dettagli
