--- a/backend/src/main/resources/messages/messages_en_US.properties
+++ b/backend/src/main/resources/messages/messages_en_US.properties
@@ -1,5 +1,6 @@
 # English (United States) Messages
 # Internationalization messages file
+# Story 5: Integration and Optimization - Sprint S2.2
 
 # ========================================
 # GENERAL MESSAGES
@@ -29,6 +30,61 @@ auth.access.denied=Access denied
 auth.user.not.found=User not found
 auth.password.invalid=Invalid password
 auth.user.not.authenticated=User not authenticated correctly
+
+# ========================================
+# RATE LIMITING - Story 5: Sprint S2.2
+# ========================================
+rate.limit.exceeded=Too many requests. Try again in {0} seconds
+rate.limit.warning=Request limit approaching maximum
+rate.limit.blocked=IP temporarily blocked due to excessive requests
+rate.limit.user.exceeded=User request limit exceeded
+rate.limit.ip.exceeded=IP request limit exceeded
+rate.limit.report.exceeded=Report request limit exceeded
+rate.limit.admin.exceeded=Administrative request limit exceeded
+rate.limit.enabled=Rate limiting enabled
+rate.limit.disabled=Rate limiting disabled
+rate.limit.bucket.created=Rate limiting bucket created for {0}
+rate.limit.bucket.cleared=Rate limiting bucket cache cleared
+rate.limit.stats.requests=Remaining requests: {0}
+rate.limit.stats.reset=Limit will reset in: {0} seconds
+
+# ========================================
+# CACHE AND PERFORMANCE - Story 5: Sprint S2.2
+# ========================================
+cache.hit=Data obtained from cache
+cache.miss=Data not found in cache, calculating...
+cache.evicted=Cache cleared successfully
+cache.statistics.hit=Statistics obtained from cache
+cache.statistics.miss=Statistics calculated and stored in cache
+cache.commission.hit=Commission report obtained from cache
+cache.commission.miss=Commission report calculated and stored in cache
+cache.categories.hit=Categories obtained from cache
+cache.categories.miss=Categories loaded and stored in cache
+cache.sellers.hit=Active sellers obtained from cache
+cache.sellers.miss=Active sellers loaded and stored in cache
+
+performance.warning=Performance degraded: operation took {0}ms (limit: {1}ms)
+performance.optimal=Operation completed in {0}ms - optimal performance
+performance.export.time=Export completed in {0}ms
+performance.query.optimized=Optimized query executed in {0}ms
+performance.index.used=Index used in query: {0}
+performance.compression.enabled=Compression enabled for response
+performance.compression.ratio=Compression ratio: {0}%
+
+# ========================================
+# INTEGRATION AND OPTIMIZATION - Story 5: Sprint S2.2
+# ========================================
+integration.test.success=Integration test executed successfully
+integration.test.failed=Integration test failed: {0}
+integration.cache.test=Cache test executed
+integration.rate.limit.test=Rate limiting test executed
+integration.compression.test=Compression test executed
+integration.performance.test=Performance test executed in {0}ms
+
+optimization.index.created=Index created for optimization: {0}
+optimization.query.improved=Query optimized with {0}% improvement
+optimization.cache.configured=Cache configured with TTL of {0} minutes
+optimization.compression.configured=Compression configured for MIME types: {0}
 
 # ========================================
 # USERS
@@ -234,6 +290,7 @@ error.403=Access denied
 error.404=Resource not found
 error.409=Data conflict
 error.422=Unprocessable data
+error.429=Too many requests - please try again later
 error.500=Internal server error
 
 # ========================================
@@ -253,7 +310,7 @@ business.resource.conflict=Resource conflict
 business.operation.not.allowed=Operation not allowed
 
 # ========================================
-# ADVANCED COMMISSION CALCULATIONS - Sprint S2.2
+# COMMISSION CALCULATIONS - Sprint S2.2
 # ========================================
 
 # Advanced Commission Calculations
@@ -266,20 +323,61 @@ commission.comparison.success=Period comparison completed successfully
 revenue.projection.success=Revenue projection calculated successfully for {0} months: ${1}
 revenue.projection.error=Error calculating revenue projection
 
-# Expiring Contracts - Story 3
+# ========================================
+# EXPIRING CONTRACTS - Story 3: Sprint S2.2
+# ========================================
+
+# Expiring Contracts Reports
 expiring.contracts.success=Expiring contracts report generated successfully - {0} contracts found
+expiring.contracts.empty=No expiring contracts found for the specified criteria
+expiring.contracts.error=Error generating expiring contracts report
+
+# Automatic Notifications
 notifications.sent.success=Expiring contract notifications sent successfully
 notifications.sent.error=Error sending expiring contract notifications
+notifications.email.sent=Notification sent by email to {0}
+notifications.email.failed=Failed to send email to {0}: {1}
+notifications.batch.completed=Notification batch processed: {0} sent, {1} failed
 
-# Specific Validations for Story 2
+# Report Export
+export.csv.success=Report exported to CSV successfully
+export.pdf.success=Report exported to PDF successfully
+export.error=Error exporting report: {0}
+export.csv.generating=Generating CSV report...
+export.pdf.generating=Generating PDF report...
+export.file.size=File generated with {0} bytes
+
+# Specific Validations for Story 3
 validation.days.range=Number of days must be between 1 and 365
 validation.months.range=Number of months must be between 1 and 24
 validation.urgency.invalid=Invalid urgency level: {0}. Valid values: HIGH, MEDIUM, LOW
 validation.seller.required=Seller ID is required
+validation.export.format.invalid=Invalid export format: {0}. Valid formats: CSV, PDF
 
-# Expiring Contract Messages
-contract.expiring.subject=Contract expiring in {0} days
+# Email Messages for Expiring Contracts
+contract.expiring.subject=⚠️ Contract expiring in {0} days
 contract.expiring.body=Hello {0},\n\nYour contract in category ''{1}'' expires in {2} days.\n\nPlease contact us for renewal.\n\nBest regards,\nElectronic Auction Team
+contract.expiring.urgent.subject=🚨 URGENT: Contract expires in {0} days
+contract.expiring.reminder.subject=📅 Reminder: Contract expiring in {0} days
+
+# Scheduler and Automatic Jobs
+scheduler.contracts.expiring.start=Starting automatic expiring contracts check
+scheduler.contracts.expiring.completed=Expiring contracts check completed in {0}ms
+scheduler.contracts.expiring.error=Error in automatic expiring contracts check
+scheduler.notifications.sent=Scheduler sent {0} expiring contract notifications
+scheduler.cleanup.start=Starting automatic data cleanup
+scheduler.cleanup.completed=Automatic cleanup completed
+
+# Urgency and Priorities
+urgency.high=High
+urgency.medium=Medium
+urgency.low=Low
+urgency.critical=Critical
+
+priority.immediate=Immediate
+priority.high=High
+priority.normal=Normal
+priority.low=Low
 
 # Formatting and Display
 commission.period.daily=Daily
@@ -292,10 +390,6 @@ commission.status.realized=Realized
 commission.status.projected=Projected
 commission.status.pending=Pending
 
-urgency.high=High
-urgency.medium=Medium
-urgency.low=Low
-
 # Metrics and KPIs
 metrics.total.contracts=Total Contracts
 metrics.active.sellers=Active Sellers
@@ -306,6 +400,8 @@ metrics.contracts.expiring=Expiring Contracts
 metrics.contracts.created=Created Contracts
 metrics.contracts.expired=Expired Contracts
 metrics.active.categories=Active Categories
+metrics.notifications.sent=Notifications Sent
+metrics.urgent.contracts=Urgent Contracts
 
 # Reports
 report.commission.title=Commission Report
@@ -314,14 +410,7 @@ report.expiring.title=Expiring Contracts Report
 report.expiring.subtitle=Contracts nearing expiration
 report.projection.title=Revenue Projection
 report.projection.subtitle=Estimates based on active contracts
-
-# Export
-export.csv.success=Report exported to CSV successfully
-export.pdf.success=Report exported to PDF successfully
-export.error=Error exporting report: {0}
-
-# Cache and Performance
-cache.statistics.hit=Statistics obtained from cache
-cache.statistics.miss=Statistics calculated and stored in cache
-performance.warning=Performance degraded: operation took {0}ms (limit: {1}ms)
-performance.optimal=Operation completed in {0}ms - optimal performance
+report.generated.at=Report generated at {0}
+report.filters.applied=Filters applied
+report.summary=Executive Summary
+report.details=Details
