feat: Implementar depreciação do catálogo público de produtos

--- a/backend/src/main/resources/messages/messages_pt_BR.properties
+++ b/backend/src/main/resources/messages/messages_pt_BR.properties
@@ -1,6 +1,7 @@
 # Mensagens em Português (Brasil) - Idioma Padrão
 # Arquivo de mensagens para internacionalização
 # História 5: Integração e Otimização - Sprint S2.2
+# História 02: Catálogo de Lotes - Sprint S2.3 V2
 
 # ========================================
 # MENSAGENS GERAIS
@@ -191,6 +192,99 @@ lot.description.required=Descrição é obrigatória
 lot.products.associated=Produtos associados ao lote com sucesso
 lot.products.activated=Produtos do lote ativados com sucesso
 lot.products.required=Lote deve ter pelo menos um produto para ser ativado
+
+# ========================================
+# HISTÓRIA 02: Catálogo de Lotes - Sprint S2.3 V2
+# ========================================
+
+# Catálogo Público de Lotes
+catalog.lots.success=Catálogo de lotes carregado com sucesso
+catalog.lots.empty=Nenhum lote encontrado para os critérios especificados
+catalog.lots.error=Erro ao carregar catálogo de lotes
+catalog.lots.filtered={0} lotes encontrados
+catalog.lots.search.results={0} lotes encontrados para "{1}"
+
+# Lotes em Destaque
+lots.featured.success=Lotes em destaque carregados com sucesso
+lots.featured.empty=Nenhum lote em destaque no momento
+lots.featured.week.criteria=Lotes encerrando em 1 semana
+lots.featured.count={0} lotes em destaque encontrados
+
+# Produtos Válidos
+products.valid.count={0} produtos válidos encontrados no lote
+products.valid.none=Nenhum produto válido encontrado no lote
+products.valid.criteria=Apenas produtos ACTIVE e PUBLISHED são exibidos
+products.valid.image.found=Imagem destaque encontrada para o lote
+products.valid.image.none=Nenhuma imagem disponível para o lote
+
+# Filtros e Ordenação
+filter.category.applied=Filtro de categoria aplicado: {0}
+filter.search.applied=Filtro de busca aplicado: {0}
+sort.proximity.ending=Ordenado por proximidade de encerramento
+sort.recent=Ordenado por mais recentes
+sort.alphabetical=Ordenado alfabeticamente
+sort.invalid=Critério de ordenação inválido: {0}
+
+# Paginação
+pagination.configured=Paginação configurada: {0} itens por página
+pagination.page.info=Página {0} de {1} ({2} total de itens)
+pagination.size.options=Opções de paginação: 10, 20, 50 por página
+pagination.default.size=Tamanho padrão de página: 10 lotes
+
+# Performance e Cache
+performance.catalog.loaded=Catálogo carregado em {0}ms
+performance.products.counted=Contagem de produtos válidos em {0}ms
+performance.image.extracted=Imagem destaque extraída em {0}ms
+cache.catalog.hit=Catálogo obtido do cache
+cache.catalog.miss=Catálogo calculado e armazenado no cache
+
+# Validações Específicas
+validation.lot.has.valid.products=Lote deve ter pelo menos um produto válido para ser exibido
+validation.lot.active.required=Apenas lotes ativos são exibidos no catálogo público
+validation.lot.not.expired=Lotes expirados não são exibidos no catálogo
+validation.search.term.length=Termo de busca deve ter pelo menos 2 caracteres
+
+# Estados dos Lotes no Catálogo
+lot.status.active.public=Ativo (visível publicamente)
+lot.status.ending.soon=Encerrando em breve
+lot.status.new=Novo
+lot.status.popular=Popular
+lot.status.featured=Em destaque
+
+# Informações do Vendedor
+seller.info.loaded=Informações do vendedor carregadas
+seller.info.error=Erro ao carregar informações do vendedor
+seller.company.display=Empresa: {0}
+seller.name.display=Vendedor: {0}
+seller.category.display=Categoria: {0}
+
+# Tempo Restante
+time.remaining.calculated=Tempo restante calculado: {0} segundos
+time.remaining.expired=Lote expirado
+time.remaining.format.days={0} dias restantes
+time.remaining.format.hours={0} horas restantes
+time.remaining.format.minutes={0} minutos restantes
+
+# Imagens
+image.featured.extracted=Imagem destaque extraída do primeiro produto
+image.featured.fallback=Usando imagem padrão para o lote
+image.format.json=Imagem extraída de formato JSON
+image.format.csv=Imagem extraída de formato CSV
+image.validation.url=URL da imagem validada
+
+# Logs e Debug
+debug.lot.processing=Processando lote: {0}
+debug.products.filtering=Filtrando produtos válidos para lote: {0}
+debug.seller.lookup=Buscando informações do vendedor para contrato: {0}
+debug.image.processing=Processando imagens para lote: {0}
+debug.pagination.setup=Configurando paginação: página {0}, tamanho {1}
+
+# Erros Específicos
+error.lot.no.valid.products=Lote não possui produtos válidos para exibição
+error.lot.contract.not.found=Contrato do lote não encontrado
+error.lot.seller.not.found=Vendedor do lote não encontrado
+error.image.extraction.failed=Falha ao extrair imagem destaque
+error.pagination.invalid=Parâmetros de paginação inválidos
 
 # ========================================
 # ESTATÍSTICAS E RELATÓRIOS
